Cross-references are now linked to their entries. Warnings are generated for non-existent cross-references, and excessive amounts of references.

--- a/textindex.css
+++ b/textindex.css
@@ -23,6 +23,10 @@ dl.index > dt.group-separator {
 	break-before: avoid-column;
 }
 
+dl.index a.entry-link {
+	color: inherit;
+}
+
 dl.index a.locator {
 	text-decoration: none;
 }
